tests/snapshots/integration_test__log_data@4b5dc5b00712f9c8ea86f0e1f78b6a27.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-user-chauthtok.log:1"
expression: result
info: "type=USER_CHAUTHTOK msg=audit(1725004607.540:730609): pid=393655 uid=0 auid=4294967295 ses=4294967295 subj=unconfined msg='op=display aging info id=0 exe=\"/usr/bin/chage\" hostname=? addr=? terminal=? res=success'\u001dUID=\"root\" AUID=\"unset\" ID=\"root\""
---
{
  "record_type": "USER_CHAUTHTOK",
  "timestamp": 1725004607540,
  "id": 730609,
  "fields": {
    "auid": null,
    "msg": "op=display aging info id=0 exe=\"/usr/bin/chage\" hostname=? addr=? terminal=? res=success",
    "pid": "393655",
    "ses": "4294967295",
    "subj": "unconfined",
    "uid": "root"
  },
  "enrichment": {
    "AUID": "unset",
    "ID": "root",
    "UID": "root"
  }
}
