tests/snapshots/integration_test__log_data@4bcdd307e60836f84a583e573fb8c4f7.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-anom-abend-2.log:1"
expression: result
info: "type=ANOM_ABEND msg=audit(1703677054.334:4223663): auid=4294967295 uid=0 gid=0 ses=4294967295 subj==/usr/bin/man//&man_groff (enforce) pid=109919 comm=\"preconv\" exe=\"/usr/bin/preconv\" sig=31 res=1\u001dAUID=\"unset\" UID=\"root\" GID=\"root\""
---
{
  "Err": {
    "Parser": {
      "Parse": "error Eof at:  (enforce) pid=109919 comm=\"preconv\" exe=\"/usr/bin/preconv\" sig=31 res=1\u001dAUID=\"unset\" UID=\"root\" GID=\"root\""
    }
  }
}
