tests/snapshots/integration_test__log_data@4ed41ea89eab155f53efac0db3ef6fcf-2.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/auparse/test3.log:3"
expression: result
info: "node=auditdtest.a1959.org type=PROCTITLE msg=audit(1451781471.394:194433): proctitle=\"bash\""
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194433,
  "node": "auditdtest.a1959.org",
  "fields": {
    "proctitle": "bash"
  }
}
