tests/snapshots/integration_test__log_data@5181ef8f6d44793323dc86725aac8c11.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-mac-policy-load.log:1"
expression: result
info: "type=MAC_POLICY_LOAD msg=audit(1670142818.140:74058301): policy loaded auid=4294967295 ses=4294967295\u001dAUID=\"unset\""
---
{
  "Err": {
    "Parse": "error Char at:  loaded auid=4294967295 ses=4294967295\u001dAUID=\"unset\""
  }
}
