tests/snapshots/integration_test__log_data@5399ced30a2f1b904c6b937f4f7a91a3.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PROCTITLE msg=audit(1451781471.394:194437): proctitle=737368643A206275726E205B707269765D"
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194437,
  "fields": {
    "proctitle": "737368643A206275726E205B707269765D"
  }
}
